--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - name: github context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
@@ -55,7 +59,11 @@ jobs:
         if: ${{ success() }}
         with:
           severity: info
-          details: A new version of Pokedex deployed
+          username: ${{ toJson(github.actor) }}
+          color: '#ff00aa'
+          avatarUrl: https://github.githubassets.com/images/modules/logos_page/Octocat.png
+          description: A new version of Pokedex deployed
+          details: to INSERT URL HERE
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Discord Webhook Notify - deployment failed
         uses: rjstone/discord-webhook-notify@v1.0.4
