--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,11 @@ jobs:
       - name: Say Hello
         run: |
           echo "Hello, world!"
+          
+      - name: Now it is
+      	run: |
+      	  date
+      	  
+      - name: Directory content
+      	run: |
+      	  ls -l 
