--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,5 @@ jobs:
           heroku_app_name: 'full-stack-open-pokedex-yves' #Must be unique in Heroku
           heroku_email: 'yalikalfic@yahoo.com'
           healthcheck: 'https://full-stack-open-pokedex-yves.herokuapp.com/health'
+          checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
