--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-    runson: ubuntu-20.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - name: npm install
-        run: npm install
-      - name: lint
+      - name: npm install 
+        run: npm install  
+      - name: lint        
         run: npm run eslint
