--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,5 @@ jobs:
         run: npm install  
       - name: lint        
         run: npm run eslint
+      - name: build
+        run npm build
