Add YAML file for deployment

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: '16'
       - name: npm install 
-        run: npm install  
+        run: npm install 
+      - name: build
+        run: npm build 
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
