--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,6 @@ jobs:
         with:          
           node-version: '16'
       - name: npm install
-        run: nom install
+        run: npm install
       - name: lint
         run: npm run eslint
