--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,10 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - name: Cypress run
+        uses: cypress-io/github-action@v4
+        with:
+          start: npm run start-prod
+          # quote the url to be safe against YML parsing surprises
+          wait-on: 'http://localhost:5000'
+          wait-on-timeout: 30
