--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
+
+    "eslint": "eslint .",
     "build": "webpack --mode production",
     "cypress:open": "cypress open"
   },
@@ -36,7 +37,8 @@
     "css-loader": "^3.5.3",
     "cypress": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-jest": "^23.11.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
