--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,3 +18,7 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint src/App.jsx
+      - name: build
+        run: npm run build
+      - name: test
+        run: npm run test
