--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,9 @@ jobs:
           # quote the url to be safe against YML parsing surprises
           wait-on: 'http://localhost:5000'
           wait-on-timeout: 30
+      - name: Deploy to heroku
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'full-stack-open-pokedex-jordi' #Must be unique in Heroku
+          heroku_email: 'sangalesbenes@uoc.edu'
