--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fullstackopen-cicd",
   "version": "1.0.0",
   "description": "Full Stack Open",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
