adds part 11 exercise 12
adds part 11 exercise 12

adds part 11 exercise 12 working

adds part 11 exercise 12 force error and rollback

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,4 @@ jobs:
           heroku_email: 'sangalesbenes@uoc.edu'
           healthcheck: 'https://full-stack-open-pokedex-jordi.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
