adds part 11 exercise 14

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,7 @@ jobs:
           # quote the url to be safe against YML parsing surprises
           wait-on: 'http://localhost:5000'
           wait-on-timeout: 30
+      if: ${{ github.event_name == 'push' }} 
       - name: Deploy to heroku
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
