--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint .",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "test:e2e" : "cypress run"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "css-loader": "^3.5.3",
     "cypress": "^10.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-commonjs": "^1.0.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.19.0",
