--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -9,7 +9,7 @@ jobs:
   hello_world:
     runs-on: ubuntu-18.04
     steps:
-      - name: Hello World
+      - name: Say hello
         run: |
           echo "Hello World!"
       - name: Now it is
