finish ex11.10.-ex11.12.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "nameless-fortress-57133"
           heroku_email: "capture13806680065@gmail.com"
+          healthcheck: "https://nameless-fortress-57133.herokuapp.com/health"
+          checkstring: "ok"
