finish ex11.10.-ex11.12.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: "capture13806680065@gmail.com"
           healthcheck: "https://nameless-fortress-57133.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
