--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,13 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
+      - name: Test Error
+        if: ${{ failure() }}
+        uses: rjstone/discord-webhook-notify@v1
+        with:
+          severity: error
+          details: Build failed
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: test
         run: npm run test
       - name: Cypress run
@@ -53,14 +60,9 @@ jobs:
           DEFAULT_BUMP: patch
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test Info
+        if: ${{ success() }}
         uses: rjstone/discord-webhook-notify@v1
         with:
           severity: info
           details: A new version of Pokedex deployed.
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Test Error
-        uses: rjstone/discord-webhook-notify@v1
-        with:
-          severity: error
-          details: Build failed
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
