--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master, fix-but-dont-deploy]
   schedule:
-    - cron: '* * * * *'
+    - cron: '5 4 1 12 1'
 
 jobs:
   test_schedule:
