--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,30 +40,31 @@ jobs:
           healthcheck: "https://nameless-fortress-57133.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-      - name: Discord notification on success
-        if: ${{ success() }}
-        uses: rjstone/discord-webhook-notify@v1
+      - name: send slack success notification
+        uses: 8398a7/action-slack@v3
         with:
-            severity: info
-            username: Github
-            color: '#00FF00'
-            description: to https://nameless-fortress-57133.herokuapp.com by ${{github.actor}}           
-            footer: 'Severity: Informational'
-            text: A new version of Pokedex deployed
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Discord notification on failure
-        if: ${{ failure() }}
-        uses: rjstone/discord-webhook-notify@v1
+          status: custom
+          fields: commit,author,took
+          custom_payload: |
+            {
+              username: 'action-slack',
+              icon_emoji: ':octocat:',
+              attachments: [{
+              color: 'good',
+                text: `A new version deployed to https://nameless-fortress-57133.herokuapp.com/ (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} succeeded in ${process.env.AS_TOOK}`,
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if:  ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') && success() }}
+      - name: send slack failure notification
+        uses: 8398a7/action-slack@v3
         with:
-            severity: info
-            username: Github
-            color: '#FF0000'
-            description: commit
-            details: "${{github.server_url}}/${{github.repository}}/commit/${{github.sha}} 
-                      by ${{github.actor}} broke the build"
-            footer: 'Severity: Error'
-            text: Build failed
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          status: ${{ job.status }}
+          fields: all
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} 
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') && failure() }}
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
