--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "quiet-springs-62533" #Must be unique in Heroku
           heroku_email: "bgp002@myy.haaga-helia.fi"
+          healthcheck: "https://quiet-springs-62533.herokuapp.com/health"
