--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,6 +51,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' &&  !contains(github.event.head_commit.message, '#skip')}}
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
