--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,7 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
-      - name: DateAndDir
+      - name: Now it is
         run: |
           date
+      - name: Directory content
+        run: |
           ls -l
