--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,5 +10,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: hello world
-        run |
-        echo "Hello World"
+       run: echo "Hello World"
