--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,13 +1,12 @@
 name: hello world
-
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master
 
 jobs:
-  hello_world_job:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: hello world
-       run: echo "Hello World"
+    hello_world_job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: hello world
+              run: echo "Hello World"
