--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
                   heroku_app_name: "hidden-waters-12808"
                   heroku_email: ${{secrets.HEROKU_EMAIL}}
                   healthcheck: "https://hidden-waters-12808.herokuapp.com/health"
+                  checkstring: "ok"
+                  rollbackonhealthcheckfailed: true
