--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -19,8 +19,8 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
-      - name: test
-        run: npm run test
+      # - name: test
+      #   run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
