--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,3 +15,6 @@ jobs:
       - name: Print date
         run: |
           date
+      - name: print directory content
+        run: |
+          ls -l
