--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,8 +6,8 @@ on:
       - master
 
 jobs:
-  deplayment pipe:
-    runs-on: Ubuntu-20.4
+  deployment_pipeline:
+    runs-on: ubuntu-20.04
     steps:
       - uses: action/checkout@v3
       - uses: action/setup-node@v2
