--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,8 +9,8 @@ jobs:
   deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
-      - uses: action/checkout@v3
-      - uses: action/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
         with:
           node-version: "16"
       - name: npm install
