--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Now it is
+        run: |
+          echo "It is $(date)"
+      - name: Directory content
+        run: |
+          ls -la
