--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,8 +19,8 @@ jobs:
         run: npm run lint
 
 
-  uses: cypress-io/github-action@v2
-  with:
-    command: npm run test:e2e
-    start: npm run start-prod
-    wait-on: http://localhost:5000
+      - uses: cypress-io/github-action@v2
+        with:
+         command: npm run test:e2e
+         start: npm run start-prod
+         wait-on: http://localhost:5000
