--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,12 +15,14 @@ jobs:
           node-version: "16"
       - name: npm install
         run: npm install
+      - name: cypress
+        run: npm install cypress --save-dev
       - name: lint
         run: npm run lint
 
-
       - uses: cypress-io/github-action@v2
+
         with:
-         command: npm run test:e2e
-         start: npm run start-prod
-         wait-on: http://localhost:5000
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
