--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - uses: actions/checkout@v2
-      - name: deploy to heroku
+      - if: ${{ github.event_name == 'push' }}
+        name: deploy to heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
