testing with cypress

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --mode production",
     "lint": "eslint .",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run -spec cypress/component/note_app.cy.js"
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": [
