--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,9 +5,10 @@ jobs:
   cypress-run:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+    
       - name: Cypress run
         uses: cypress-io/github-action@v4
