--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+      - name: npm install
+        uses: npm install 
     
       - name: Cypress run
         uses: cypress-io/github-action@v4
