--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,3 @@
-
 name: End-to-end tests
 
 on: [push]
@@ -10,6 +9,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
-    
+      - name: npm install
+        run: npm install
       - name: Cypress run
         uses: cypress-io/github-action@v4
