--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fullstackopen-cicd",
   "version": "1.0.0",
+  "engine": {
+    "version": "8.5.2"
+  },
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
