--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullstackopen-cicd",
   "version": "1.0.0",
-  "engine": {
+  "engines": {
     "version": "8.5.2"
   },
   "description": "Full Stack Open",
