--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fullstackopen-cicd",
   "version": "1.0.0",
   "engines": {
-    "version": "8.5.2"
+    "node": ">=16.x"
   },
   "description": "Full Stack Open",
   "main": "src/index.js",
