--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "cypress": "^10.2.0",
+    "cypress": "^10.3.0",
     "express": "^4.17.1",
+    "punycode": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
