--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,8 +8,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: 'npm'
-      
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
+         node-version: 16
+         cache: 'npm'
+      - run: npm ci
+      - run: npm test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:8081
