--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_api_key: ${{secrets.sHEROKU_API_KEY}}
           heroku_app_name: "pokedex-devops" #Must be unique in Heroku
           heroku_email: "mateo.lomas@initgrammers.com"
           remote_branch: "main"
