--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,9 +6,9 @@ on:
       - master
 
 jobs:
-  simple_deployment_pipeline:    
-    runs-on: ubuntu-20.04    
-    steps:      
+  simple_deployment_pipeline:
+    runs-on: ubuntu-20.04
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
@@ -21,4 +21,9 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-        
+      - name: e2e tests
+        uses: cypres-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
