--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedox2022" #Must be unique in Heroku
           heroku_email: "kaimhall@gmail.com"
+          healthcheck: "https://pokedox2022.herokuapp.com/health"
+          checkstring: "ok"
