--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,18 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+
+  tag_release:
+    needs: [deployment_pipeline, build]
+    runs-on: ubuntu-20.04
+    if: ${{ github.event_name == 'pull_request' }}
+    steps:
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.HEROKU_API_KEY }}
+          DEFAULT_BUMP: patch
+
   build:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
@@ -44,14 +56,3 @@ jobs:
           healthcheck: "https://pokedox2022.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-  tag_release:
-    needs: [deployment_pipeline, build]
-    runs-on: ubuntu-20.04
-    if: ${{ github.event_name == 'pull_request' }}
-    steps:
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
-          DEFAULT_BUMP: patch
