--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,12 +45,12 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
   tag_release:
-    needs: [deployment_pipeline, build]
+    needs: [deployment_pipeline]
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'pull_request' }}
     steps:
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.36.0
         env:
-          GITHUB_TOKEN: ${{ secrets.HEROKU_API_KEY }}
+          GITHUB_TOKEN: ${{secrets.HEROKU_API_KEY}}
           DEFAULT_BUMP: patch
