--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,7 +14,7 @@ jobs:
           echo "Hello World!"
       - name: Now it is
         run: |
-          Run date
+          date
       - name: Directory content
         run: |
-          Run ls -l
+          ls -l
