added health check to pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "marvelous-crater-lake-02747" #Must be unique in Heroku
           heroku_email: "atte.laakso91@gmail.com"
+          healthcheck: "https://marvelous-crater-lake-02747.herokuapp.com/health"
+          checkstring: "ok"
