--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,10 +27,11 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "marvelous-crater-lake-02747" #Must be unique in Heroku
-          heroku_email: "atte.laakso91@gmail.com"
-          healthcheck: "https://marvelous-crater-lake-02747.herokuapp.com/health"
-          checkstring: "ok"
+      - name: heroku deployment
+        - uses: akhileshns/heroku-deploy@v3.12.12
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "marvelous-crater-lake-02747" #Must be unique in Heroku
+            heroku_email: "atte.laakso91@gmail.com"
+            healthcheck: "https://marvelous-crater-lake-02747.herokuapp.com/health"
+            checkstring: "ok"
