--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,7 +53,7 @@ jobs:
       - name: commit messages to variable
         env:
           COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
+        if: contains(env.COMMIT_MESSAGES, '#SKIP')
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
