--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,17 +54,18 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
         if: contains(env.COMMIT_MESSAGES, '#SKIP')
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "marvelous-crater-lake-02747" #Must be unique in Heroku
-          heroku_email: "atte.laakso91@gmail.com"
-          healthcheck: "https://marvelous-crater-lake-02747.herokuapp.com/health"
-          checkstring: "ok"
-          rollbackonhealthcheckfailed: true
+        run: |
+          - uses: actions/setup-node@v2
+            with:
+              node-version: '16'
+          - uses: akhileshns/heroku-deploy@v3.12.12
+            with:
+              heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+              heroku_app_name: "marvelous-crater-lake-02747" #Must be unique in Heroku
+              heroku_email: "atte.laakso91@gmail.com"
+              healthcheck: "https://marvelous-crater-lake-02747.herokuapp.com/health"
+              checkstring: "ok"
+              rollbackonhealthcheckfailed: true
   a_test_job:
     runs-on: ubuntu-20.04
     steps:
