--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,14 +46,11 @@ jobs:
         WITH_V: true
         DEFAULT_BUMP: patch
   heroku_deployment:
-    runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'push' }}
+    if: "!contains(github.event.head_commit.message, '#SKIP')"
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - name: commit messages to variable
-        env:
-          COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
