--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint ./**/*.{js,jsx}",
     "build": "webpack --mode production",
     "cypress:open": "cypress run",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "heroku-prebuild": "npm install --dev"
   },
   "repository": {
     "type": "git",
@@ -45,7 +46,7 @@
     "jest": "^25.5.4",
     "prettier": "^2.7.1",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
