--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "start-prod": "npm run build && node app.js",
+    "start-prod": "npm run build",
     "test": "jest",
     "eslint": "eslint ./**/*.{js,jsx}",
     "build": "webpack --mode production",
     "cypress:open": "cypress run",
     "test:e2e": "cypress run",
-    "heroku-prebuild": "npm install --dev"
+    "heroku-prebuild": "npm install --include"
   },
   "repository": {
     "type": "git",
