fixed yaml for cypress

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,9 +23,7 @@ jobs:
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
-        with:  
-          browser: chrome
-          headless: true
-          command: npx cypress run
+        with:
+          command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
