updated trigger point for pulls

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,9 +1,12 @@
-name: Deploy
+name: Deploy and check
 
 on:
   push:
     branches:
       - master
+    pull_request:
+      branches: [master]
+      types: [opened, synchronize]
 
 jobs:
   build:
